--- a/demo/demo-guide.html
+++ b/demo/demo-guide.html
@@ -31,7 +31,16 @@
             <h1 class="text-4xl font-black text-slate-900 mb-3">
                 Work <span class="text-indigo-600">Re-design</span> Demo Guide
             </h1>
-            <p class="text-lg text-slate-600">마케팅기획팀 시나리오 기반 데모 시연 가이드</p>
+            <p class="text-lg text-slate-600 mb-4">마케팅기획팀 시나리오 기반 데모 시연 가이드</p>
+            
+            <div class="flex justify-center gap-4 text-sm">
+                <a href="http://localhost:3000" target="_blank" class="flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors shadow-sm">
+                    <span>🚀</span> 워크샵 실행 (Frontend)
+                </a>
+                <a href="http://localhost:3001" target="_blank" class="flex items-center gap-2 px-4 py-2 bg-white border border-slate-200 text-slate-600 rounded-lg hover:bg-slate-50 transition-colors shadow-sm">
+                    <span>🔧</span> 서버 상태 (Backend)
+                </a>
+            </div>
         </header>
 
         <!-- Phase Overview -->
